--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/router": "^16.0.0",
     "ag-grid-angular": "^29.3.5",
     "ag-grid-community": "^29.3.5",
+    "lowdb": "^6.0.1",
+    "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "url": "^0.11.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.3/xlsx-0.19.3.tgz",
     "zone.js": "~0.13.0"
   },
