--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.18.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node --max-http-header-size 80000 ./bin/www"
   },
   "nodemonConfig": {
     "ignore": ["./angular/"]
