--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.18.0",
   "private": true,
   "scripts": {
-    "start": "node --max-http-header-size 80000 ./bin/www"
+    "start": "node --max-http-header-size 80000 ./app.js"
+	
   },
   "nodemonConfig": {
-    "ignore": ["./angular/"]
+    "ignore": ["./angular/","./serverConfig.json"]
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
