--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,14 +3,16 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/cwtestb2/deploy
     - export REPOPATH=/home/cwtestb2/repositories/express_server_mySql
-    # Remove previous old files, if any.
     - /bin/rm -Rf ${DEPLOYPATH}_old
-    # Copy old site files to another directory.
     - /bin/cp -R ${DEPLOYPATH} ${DEPLOYPATH}_old
-    # Sync repository files to the deploy target path, excluding .git folder.
-    # --delete-after will remove deleted files and folders after syncing.
-    - /bin/rsync -aP --exclude '.git' --exclude '.well-known' ${REPOPATH}/ ${DEPLOYPATH} --delete-after
-    # Set correct permissions.
-    - /bin/chmod 755 ${DEPLOYPATH}
-    - /bin/find ${DEPLOYPATH} -type d -exec /bin/chmod 755 '{}' \;
-    - /bin/find ${DEPLOYPATH} -type f -exec /bin/chmod 644 '{}' \;
+    - /bin/cp -R ${REPOPATH}/bin ${DEPLOYPATH}
+    - /bin/cp -R ${REPOPATH}/db ${DEPLOYPATH}
+    - /bin/cp -R ${REPOPATH}/dist ${DEPLOYPATH}
+    - /bin/cp -R ${REPOPATH}/localDb ${DEPLOYPATH}
+    - /bin/cp -R ${REPOPATH}/node_modules ${DEPLOYPATH}
+    - /bin/cp -R ${REPOPATH}/public ${DEPLOYPATH}
+    - /bin/cp -R ${REPOPATH}/routes ${DEPLOYPATH}
+    - /bin/cp -R ${REPOPATH}/view ${DEPLOYPATH}
+    - /bin/cp -R ${REPOPATH}/app.js ${DEPLOYPATH}
+    - /bin/cp -R ${REPOPATH}/package-lock.json ${DEPLOYPATH}
+    - /bin/cp -R ${REPOPATH}/package.json ${DEPLOYPATH}
