--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "start": "node --max-http-header-size 80000 ./app.js"
-	
   },
   "nodemonConfig": {
-    "ignore": ["./angular/","./serverConfig.json"]
+    "ignore": [
+      "./angular/",
+      "./serverConfig.json"
+    ]
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -19,6 +21,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^3.6.1",
     "node-localstorage": "^3.0.5",
+    "nodemon": "^3.1.1",
     "socket.io": "^4.7.2"
   }
 }
