--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^3.6.1",
     "node-localstorage": "^3.0.5",
+    "node-persist": "^4.0.1",
     "nodemon": "^3.1.1",
     "socket.io": "^4.7.2"
   }
