--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-localstorage": "^3.0.5",
     "node-persist": "^4.0.1",
     "nodemon": "^3.1.1",
+    "redis-server": "^1.2.2",
     "socket.io": "^4.7.2"
   }
 }
