--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -15,5 +15,6 @@ deployment:
     - /bin/cp -R ${REPOPATH}/routes ${DEPLOYPATH}
     - /bin/cp -R ${REPOPATH}/views ${DEPLOYPATH}
     - /bin/cp -R ${REPOPATH}/app.js ${DEPLOYPATH}
+    - /bin/cp -R ${REPOPATH}/_f.js ${DEPLOYPATH}
     - /bin/cp -R ${REPOPATH}/package-lock.json ${DEPLOYPATH}
     - /bin/cp -R ${REPOPATH}/package.json ${DEPLOYPATH}
