--- a/angular_frontEnd_mySql/package.json
+++ b/angular_frontEnd_mySql/package.json
@@ -24,6 +24,7 @@
     "ag-grid-community": "^29.3.5",
     "angular-notifier": "^14.0.0",
     "bootstrap": "^5.2.3",
+    "ngx-indexed-db": "^18.0.0",
     "ngx-socket-io": "^4.5.1",
     "path": "^0.12.7",
     "rxjs": "~7.8.0",
